@@ -1,81 +1,0 @@
-<% email_settings_page_breadcrumb %>
-
-<h1>Server Settings - E-Mail</h1>
-
-<p>This is where you configure how cruise control sends mail</p>
-
-
-<div id="email_settings" class="select_<%=@email_type%>_email_settings">
-
-<fieldset> 
-<p>Choose how cruise control will send email :</p>
-  
-<%= radio_button_tag('email_type', 'gmail', @email_type == :gmail,
-                     :onclick => "$('email_settings').className = 'select_gmail_email_settings'") %> 
-                     Gmail<br/>
-<%= radio_button_tag('email_type', 'no_authentication', @email_type == :no_authentication,
-                     :onclick => "$('email_settings').className = 'select_no_authentication_email_settings'") %> 
-                     SMTP Server with no authentication<br/>
-<%= radio_button_tag('email_type', 'manual', @email_type == :manual, 
-                     :onclick => "$('email_settings').className = 'select_manual_email_settings'") %> 
-                     SMTP Server with authentication<br/>
-</fieldset>
-
-<br/>
-
-<fieldset>
-    
-<div class="manual_email_settings">
-  <% form_for :email_settings, @email_settings, :url => {:action => 'update_email_settings'} do |f| %>
-    <table class="settings">
-      <%= setting_row('Address', f.text_field(:address), 'your smtp server') %>
-      <%= setting_row('Port', f.text_field(:port), 'e.g. 25') %>
-      <%= setting_row('Domain', f.text_field(:domain), 'e.g. yourdomain.com') %>
-      <%= setting_row('Authentication', f.text_field(:authentication), 'plain, login, or cram_md5') %>
-      <%= setting_row('User Name', f.text_field(:user_name), 'e.g. your.gmail.name') %>
-      <%= setting_row('Password', f.password_field(:password)) %>
-    </table>
-    <%= submit_tag %>
-  <% end %>
-</div>
-
-<div class="gmail_email_settings">
-  <% form_for :email_settings, @email_settings, :url => {:action => 'update_email_settings'} do |f| %>
-    <%= hidden_field_tag('email_settings[address]', 'smtp.gmail.com') %>
-    <%= hidden_field_tag('email_settings[port]', '587') %>
-    <%= hidden_field_tag('email_settings[domain]', 'yourdomain.com') %>
-    <%= hidden_field_tag('email_settings[authentication]', :plain) %>
-    <table class="settings">
-      <%= setting_row('User Name', f.text_field(:user_name), 'e.g. your.gmail.name') %>
-      <%= setting_row('Password', f.password_field(:password)) %>
-    </table>
-    <%= submit_tag %>
-  <% end %>
-</div>
-
-<div class="no_authentication_email_settings">
-  <% form_for :email_settings, @email_settings, :url => {:action => 'update_email_settings'} do |f| %>
-    <table class="settings">
-      <%= setting_row('Address', f.text_field(:address), 'your smtp server') %>
-      <%= setting_row('Port', f.text_field(:port), 'e.g. 25') %>
-      <%= setting_row('Domain', f.text_field(:domain), 'e.g. yourdomain.com') %>
-    </table>
-    <%= submit_tag %>
-  <% end %>
-</div>
-
-</div>
-
-</fieldset>
-
-<br/>
-
-<fieldset>
-<p>Send a test e-mail to :<p>
-
-<% form_tag(:action => 'send_test_mail') do %>
-  <%= text_field "email", "recipients" %>
-  <%= submit_tag "send" %>
-<% end %>
-
-</fieldset>
