@@ -1,3 +1,0 @@
-<ul>
-  <li><%= link_to "test e-mail", :action => "test_mail" %></li>
-</ul>
