@@ -1,5 +1,0 @@
-<% server_settings_page_breadcrumb %>
-
-<ul>
-  <li><%= link_to 'E-Mail', :action => 'email_settings' %></li>
-</ul>
